changed app's path; added more structure's visibility

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        ru.msm.pm.App
+                                        ru.msm.pm.app.App
                                     </mainClass>
                                 </manifest>
                             </archive>
