--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>simple-pm-system-dto</module>
         <module>simple-pm-system-dao</module>
         <module>simple-pm-system-services</module>
+        <module>simple-pm-system-common</module>
     </modules>
 
     <properties>
@@ -23,11 +24,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
