--- a/simple-pm-system-dto/pom.xml
+++ b/simple-pm-system-dto/pom.xml
@@ -12,7 +12,15 @@
     <artifactId>simple-pm-system-dto</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ru.msm.pm</groupId>
+            <artifactId>simple-pm-system-common</artifactId>
+            <version>${revision}${changelist}</version>
+        </dependency>
     </dependencies>
 
 </project>
