[dao] add EmployeeJdbcDaoImpl, EmployeeFilter and DbUtil; add postgresql and lombok dependency [parent-module] add postgresql dependency

--- a/simple-pm-system-dao/pom.xml
+++ b/simple-pm-system-dao/pom.xml
@@ -15,6 +15,15 @@
             <artifactId>simple-pm-system-model</artifactId>
             <version>${revision}${changelist}</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
