--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
         <lombok.version>1.18.24</lombok.version>
+        <postgresql.version>42.6.0</postgresql.version>
     </properties>
 
     <dependencyManagement>
@@ -34,6 +35,11 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
