--- a/simple-pm-system-common/pom.xml
+++ b/simple-pm-system-common/pom.xml
@@ -12,7 +12,14 @@
     <artifactId>simple-pm-system-common</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
     </dependencies>
 
 
