--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <spring-core.version>5.3.23</spring-core.version>
         <spring-context.version>5.3.23</spring-context.version>
         <spring-boot-starter.version>2.7.3</spring-boot-starter.version>
-        <spring-boot-starter-data-jpa>2.7.3</spring-boot-starter-data-jpa>
+        <spring-boot-starter-data-jpa.version>2.7.3</spring-boot-starter-data-jpa.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
     </properties>
 
