--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <spring-boot-starter.version>2.7.3</spring-boot-starter.version>
         <spring-boot-starter-data-jpa.version>2.7.3</spring-boot-starter-data-jpa.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
+        <liquibase.version>4.18.0</liquibase.version>
     </properties>
 
     <dependencyManagement>
@@ -72,6 +73,11 @@
                 <groupId>javax.xml.bind</groupId>
                 <artifactId>jaxb-api</artifactId>
                 <version>${jaxb-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>${liquibase.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
