--- a/simple-pm-system-dao/pom.xml
+++ b/simple-pm-system-dao/pom.xml
@@ -36,6 +36,10 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
