--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
+
         <lombok.version>1.18.24</lombok.version>
         <postgresql.version>42.6.0</postgresql.version>
         <spring-core.version>5.3.23</spring-core.version>
@@ -32,6 +33,7 @@
         <spring-boot-starter-data-jpa.version>2.7.3</spring-boot-starter-data-jpa.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <liquibase.version>4.18.0</liquibase.version>
+        <springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
     </properties>
 
     <dependencyManagement>
@@ -68,6 +70,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
                 <version>${spring-boot-starter-data-jpa.version}</version>
+            </dependency>
+<!--            todo версии -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>2.7.3</version>
             </dependency>
             <dependency>
                 <groupId>javax.xml.bind</groupId>
