--- a/simple-pm-system-controllers/pom.xml
+++ b/simple-pm-system-controllers/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>simple-pm-system-services</artifactId>
             <version>${revision}${changelist}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
