spring-boot-starter-security dependency. [controllers] added spring-boot-starter-security dependency; SecurityConfig; [services] added spring-boot-starter-security dependency; passwordEncoder work; implements UserDetailsService; initAdmin();

--- a/simple-pm-system-services/pom.xml
+++ b/simple-pm-system-services/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>simple-pm-system-dao</artifactId>
             <version>${revision}${changelist}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
 
