--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
         <spring-core.version>5.3.23</spring-core.version>
         <spring-context.version>5.3.23</spring-context.version>
         <spring-boot-starter.version>2.7.3</spring-boot-starter.version>
-        <spring-boot-starter-data-jpa.version>2.7.3</spring-boot-starter-data-jpa.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <liquibase.version>4.18.0</liquibase.version>
         <springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
+        <junit-jupiter.version>5.7.0</junit-jupiter.version>
     </properties>
 
     <dependencyManagement>
@@ -69,13 +69,13 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
-                <version>${spring-boot-starter-data-jpa.version}</version>
+                <version>${spring-boot-starter.version}</version>
             </dependency>
 <!--            todo версии -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>2.7.3</version>
+                <version>${spring-boot-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
@@ -85,7 +85,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
-                <version>2.7.3</version>
+                <version>${spring-boot-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.xml.bind</groupId>
@@ -96,6 +96,30 @@
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-core</artifactId>
                 <version>${liquibase.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit-jupiter.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot-starter.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
