--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <liquibase.version>4.18.0</liquibase.version>
         <springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
+        <testcontainers.version>1.17.6</testcontainers.version>
     </properties>
 
     <dependencyManagement>
@@ -71,7 +72,7 @@
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
                 <version>${spring-boot-starter.version}</version>
             </dependency>
-<!--            todo версии -->
+            <!--            todo версии -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
@@ -120,6 +121,24 @@
                         <artifactId>junit</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${testcontainers.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
