--- a/pom.xml
+++ b/pom.xml
@@ -25,28 +25,29 @@
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
 
+        <!--        Utils dependencies versions:        -->
         <lombok.version>1.18.24</lombok.version>
         <postgresql.version>42.6.0</postgresql.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <liquibase.version>4.18.0</liquibase.version>
+        <log4j.version>2.20.0</log4j.version>
 
-        <!--        Spring:        -->
-        <spring-core.version>5.3.23</spring-core.version>
-        <spring-context.version>5.3.23</spring-context.version>
+        <!--        Spring dependencies versions:        -->
         <spring-boot-starter.version>2.7.3</spring-boot-starter.version>
         <springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
 
-        <!--        Tests:        -->
+        <!--        Tests dependencies versions:        -->
         <junit-jupiter.version>5.7.0</junit-jupiter.version>
         <testcontainers.version>1.17.6</testcontainers.version>
 
-        <!--        Plugins:        -->
+        <!--        Plugins versions:        -->
         <surefire-plugin.version>3.0.0-M6</surefire-plugin.version>
         <spring-boot-maven-plugin.version>3.1.0</spring-boot-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!--        utils:        -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -58,22 +59,28 @@
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>${spring-core.version}</version>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb-api.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${spring-context.version}</version>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>${liquibase.version}</version>
             </dependency>
+
+            <!--        spring (starters etc.):        -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>${spring-boot-starter.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -95,16 +102,8 @@
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>${spring-boot-starter.version}</version>
             </dependency>
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${jaxb-api.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-core</artifactId>
-                <version>${liquibase.version}</version>
-            </dependency>
+
+            <!--        tests: junit-jupiter        -->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
@@ -129,6 +128,8 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
+            <!--        tests: testcontainers        -->
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers</artifactId>
@@ -147,8 +148,49 @@
                 <version>${testcontainers.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <!--        logs: log4j2        -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-log4j2</artifactId>
+                <version>${spring-boot-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-spring-boot</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <pluginManagement>
