--- a/simple-pm-system-app/src/main/resources/application.properties
+++ b/simple-pm-system-app/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-server.error.include-message=always
+#server.error.include-message=on_param
